# private-pinyin-ime

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/workflows/: rust.yml  windows-package.yml
ai/: README.md  model_manifest.schema.json  model_manifest.template.example.json  model_package_policy.md
ai/eval/: README.md  ai04_rules_report.md  ai06_ranker_cases.json  ai06_ranker_report.md  ai12_release_gate.json  baseline_cases.tsv  baseline_report.md  dataset_manifest.json
ai/eval/privacy_cases/: false_positive.json  id_card.json  password.json  payment.json  phone.json  token.json
ai/helper/: README.md
ai/helper/private_pinyin_ai_helper/: Cargo.toml
ai/helper_protocol/: Cargo.toml
ai/helper_protocol/src/: lib.rs
ai/local_ai_core/: Cargo.toml
ai/local_ai_core/assets/: english_terms.tsv  pinyin_corrections.tsv
ai/local_ai_core/src/: budget.rs  error.rs  feature.rs  hardware.rs  identity.rs  lib.rs  lite_ranker.rs  mock_provider.rs  model_integrity.rs  model_manifest.rs  model_tests.rs  model_verifier.rs  privacy_guard.rs  privacy_tests.rs  provider.rs  request.rs  request_builder.rs  response.rs  tests.rs  worker.rs
ai/local_ai_core/src/rules/: english_terms.rs  lexicon_cleanup.rs  mod.rs  pinyin_correction.rs  tests.rs
ai/models/: approved_models.json
ai/models/private-pinyin-ai-lite-ranker-v1/: MODEL_NOTICE.md  manifest.json
ai/writer_feasibility/: QWEN_1_5B_MODEL_NOTICE.md  QWEN_MODEL_NOTICE.md  ai10_macos_arm64_report.json  ai11_macos_arm64_report.json  ai11_synthetic_cases.json  qwen2.5-0.5b-instruct-q4-k-m.candidate.json  qwen2.5-1.5b-instruct-q4-k-m.candidate.json  synthetic_cases.json
ai/writer_runtime/: MODEL_NOTICE.md  desktop_writer_runtime_manifest.json
config/: default_settings.json
docs/: DECISIONS.md  DEVELOPMENT_PROGRESS.md  OPEN_ITEMS.md  ios_keyboard_extension_notes.md  ios_keyboard_smoke_record.md  ios_release_stage_plan.md  ios_testflight_upload_record.md  lexicon_data_policy.md  local_ai_development_plan.md  local_rime_lexicon_import.md  macos_inputmethodkit_notes.md  macos_public_release_checklist.md  macos_update_strategy.md  platform_smoke_test_plan.md  privacy_spec.md  private_pinyin_ime_development_spec.md  release_distribution_plan.md  windows_tsf_notes.md
ffi/: README.md  SWIFT_CPP_INTEGRATION.md  c_api.h
ffi/examples/: c_demo.c  c_layout_check.c
ffi/ime_ffi/: Cargo.toml
ffi/ime_ffi/src/: desktop_ai.rs  lib.rs  local_ai.rs
ffi/ime_ffi/tests/: c_api_tests.rs  layout_tests.rs
ime_core/: Cargo.toml  README.md
ime_core/assets/: base_lexicon.tsv  base_lexicon_sample.tsv  bigram.tsv  bigram_sample.tsv  lexicon_manifest.json
ime_core/src/: api.rs  atomic_file.rs  candidate.rs  error.rs  imported_lexicon.rs  key_event.rs  lexicon.rs  lib.rs  logger.rs  nine_key.rs  pinyin_parser.rs  predictor.rs  privacy.rs  ranker.rs  session.rs  settings.rs  syllable.rs  user_lexicon.rs
ime_core/tests/: candidate_tests.rs  imported_lexicon_tests.rs  parser_tests.rs  prediction_tests.rs  privacy_tests.rs  ranking_tests.rs  settings_tests.rs  user_lexicon_tests.rs
platform/ios_keyboard/: README.md
platform/ios_keyboard/AppStoreMetadata/: ExportOptions.plist.template  ExportOptions.upload.plist.template  README.md  Signing.env.example
platform/ios_keyboard/ContainerApp/: ContentView.swift  Info.plist  IosLexiconImportBridge.swift  IosSettingsStore.swift  PrivatePinyin.entitlements  PrivatePinyinApp.swift
platform/ios_keyboard/KeyboardExtension/: Info.plist  IosPinyinCoreBridge.swift  KeyboardViewController.swift  (+1 more)
platform/macos_imk/: README.md
platform/windows_tsf/: CMakeLists.txt  PrivatePinyinTsf.def  README.md
platform/windows_tsf/installer/: PrivatePinyinTsf.nsi  PrivatePinyinTsf.wxs  ReleaseNotes.zh-Hans.txt  open-onboarding.ps1  open-settings.ps1  open-writer.ps1  register-ime.ps1  unregister-ime.ps1
platform/windows_tsf/src/: ai_helper_client.cpp  ai_helper_client.h  ai_helper_probe_main.cpp  candidate_window.cpp  candidate_window.h  class_factory.cpp  class_factory.h  com_ptr.h  core_bridge.cpp  core_bridge.h  dllmain.cpp  globals.h  guids.h  key_map.cpp  key_map.h  registration.cpp  registration.h  text_service.cpp  text_service.h
scripts/: README.md  build_ios_keyboard.sh  build_macos_imk.sh  build_windows_tsf.ps1  check_ai01_evaluation_sources.sh  check_ai02_runtime_contracts.sh  check_ai03_privacy_sources.sh  check_ai04_rules_sources.sh  check_ai05_model_gate_sources.sh  check_ai06_lite_ranker_sources.sh  check_ai07_desktop_integration_sources.sh  check_ai08_ios_integration_sources.sh  check_ai09_desktop_helper_sources.sh  check_ai10_writer_feasibility_sources.sh  check_ai11_writer_integration_sources.sh  check_ai12_release_gates.sh  check_ai_privacy_sources.sh  check_desktop_writer_runtime_sources.sh  check_installers_settings_sources.sh  check_ios_keyboard_sources.sh  check_local_lexicon_import_sources.sh  check_macos_imk_sources.sh  check_macos_public_release.sh  check_no_external_ai_service.sh  check_platform_validation_sources.sh  check_stage09_core_sources.sh  check_stage10_platform_host_sources.sh  check_stage11_settings_privacy_sources.sh  check_stage12_release_sources.sh  check_stage13_lexicon_sources.sh  check_stage14_ios_signing_sources.sh  check_stage15_ios_smoke_sources.sh  check_stage16_ios_testflight_sources.sh  check_update01_sources.sh  check_update02_sources.sh  check_update03_sources.sh  check_windows_tsf_sources.sh  package_ios_app_store.sh  package_macos_pkg.sh  package_windows_tsf.ps1  (+15 more)
tools/: README.md
tools/ai_benchmark/: Cargo.toml
tools/ai_benchmark/src/: main.rs
tools/ai_eval_runner/: Cargo.toml
tools/ai_eval_runner/src/: lib.rs  main.rs  ranker_eval.rs
tools/lexicon_builder/: Cargo.toml
tools/lexicon_builder/src/: main.rs
tools/model_packager/: Cargo.toml
tools/model_packager/src/: lib.rs  main.rs
tools/settings_cli/: Cargo.toml
tools/test_cli/: Cargo.toml
tools/writer_feasibility/: Cargo.toml
tools/writer_feasibility/src/: lib.rs  main.rs
(+48 files in other folders)
