[workspace]
members = [
    "ai/local_ai_core",
    "ffi/ime_ffi",
    "ime_core",
    "tools/ai_benchmark",
    "tools/ai_eval_runner",
    "tools/lexicon_builder",
    "tools/model_packager",
    "tools/settings_cli",
    "tools/test_cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.23"
authors = ["PrivatePinyin IME contributors"]
license = "LicenseRef-All-Rights-Reserved"
