[package]
name = "ime_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ime_core"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled", "functions"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
