[package]
name = "private_pinyin_local_ai_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "private_pinyin_local_ai_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10"
