[package]
name = "private_pinyin_ai_benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "private-pinyin-ai-benchmark"
path = "src/main.rs"

[dependencies]
ime_core = { path = "../../ime_core" }
private_pinyin_ai_eval_runner = { path = "../ai_eval_runner" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
