[package]
name = "private_pinyin_ai_eval_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "private_pinyin_ai_eval"
path = "src/lib.rs"

[[bin]]
name = "private-pinyin-ai-eval"
path = "src/main.rs"

[dependencies]
ime_core = { path = "../../ime_core" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
