[package]
name = "private_pinyin_lexicon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "private-pinyin-lexicon"
path = "src/main.rs"

[dependencies]
ime_core = { path = "../../ime_core" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
