[package]
name = "private_pinyin_writer_feasibility"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "private_pinyin_writer_feasibility"
path = "src/lib.rs"

[[bin]]
name = "private-pinyin-writer-feasibility"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
